@@ -12,13 +12,13 @@ shade maven plugin for java projects / Java项目的打包插件
 
 ## demo
 
-https://github.com/knightliao/starter-assembly-demo
+https://github.com/knightliao/starter-shade-demo
 
 ## 使用方式
 
     <build>
     
-        <finalName>starter-assembly-demo</finalName>
+        <finalName>starter-shade-demo</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -26,28 +26,42 @@ https://github.com/knightliao/starter-assembly-demo
         </resources>
 
         <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.example.starter.DemoMain</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>com.github.knightliao.plugin</groupId>
-                <artifactId>starter-assembly-maven-plugin</artifactId>
+                <artifactId>starter-shade-maven-plugin</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
-                <configuration>
-                    <appendAssemblyId>false</appendAssemblyId>
-                    <finalName>${project.build.finalName}</finalName>
-                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>${project.build.finalName}</finalName>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.example.starter.DemoMain</mainClass>
+                                </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
+                                    <resources>
+                                    </resources>
+                                </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/spring.handlers</resource>
+                                </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/spring.schemas</resource>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
+
         </plugins>
 
     </build>
@@ -56,62 +70,54 @@ https://github.com/knightliao/starter-assembly-demo
 
 ### 打包
 
-mvn clean package starter:bin
+mvn clean package
 
 ### 结果
 
 #### target目录
-
-    ➜  target git:(master) ls -l
-    total 25408
-    drwxr-xr-x  2 knightliao  staff        68  6  3 00:20 archive-tmp
-    drwxr-xr-x  7 knightliao  staff       238  6  3 00:20 classes
-    drwxr-xr-x  3 knightliao  staff       102  6  3 00:20 maven-archiver
-    -rw-r--r--  1 knightliao  staff      5009  6  3 00:20 starter-assembly-demo.jar
-    -rw-r--r--  1 knightliao  staff  13000346  6  3 00:20 starter-assembly-demo.tar.gz
-    drwxr-xr-x  6 knightliao  staff       204  6  3 00:20 starter-run
+    
+    ➜  target git:(master) ll
+    total 52824
+    drwxr-xr-x  7 knightliao  staff       238  6  3 17:23 classes
+    drwxr-xr-x  3 knightliao  staff       102  6  3 17:23 maven-archiver
+    -rw-r--r--  1 knightliao  staff      5219  6  3 17:23 original-starter-shade-demo.jar
+    drwxr-xr-x  8 knightliao  staff       272  6  3 17:23 starter-run
+    -rw-r--r--  1 knightliao  staff  14106191  6  3 17:23 starter-shade-demo.jar
+    -rw-r--r--  1 knightliao  staff  12927960  6  3 17:23 starter-shade-demo.tar.gz
 
 其中
 
 - starter-run 是可部署的环境，包含所有可执行脚本以及jar包的文件目录 
-- starter-assembly-demo.tar.gz 是对 starter-run 目录的打包
+- starter-shade-demo.tar.gz 是对 starter-run 目录的打包
 
 #### starter-run目录
 
     ➜  target git:(master) cd starter-run
     ➜  starter-run git:(master) ls -l
-    total 16
-    drwxr-xr-x   5 knightliao  staff   170  6  3 00:20 conf
-    drwxr-xr-x  14 knightliao  staff   476  6  3 00:20 lib
-    -rw-r--r--   1 knightliao  staff  1160  6  3 00:20 start.sh
-    -rw-r--r--   1 knightliao  staff   542  6  3 00:20 stop.sh
+    total 27592
+    -rw-r--r--  1 knightliao  staff         9  6  3 17:23 demo.properties
+    -rw-r--r--  1 knightliao  staff       412  6  3 17:23 env
+    -rw-r--r--  1 knightliao  staff      1353  6  3 17:23 logback.xml
+    -rw-r--r--  1 knightliao  staff      1037  6  3 17:23 start.sh
+    -rw-r--r--  1 knightliao  staff  14106191  6  3 17:23 starter-shade-demo.jar
+    -rw-r--r--  1 knightliao  staff       532  6  3 17:23 stop.sh
 
 其中
 
 - start.sh 是开始脚本, 插件自动生成的
 - stop.sh 是关闭脚本, 插件自动生成的
-- lib 包含所有jar包
-- conf 包含所有配置
-
-##### conf目录
-
-    ➜  starter-run git:(master) ls conf
-    demo.properties env             logback.xml
-    
-其中
-
 - env 是启动前的环境变量设置
 
 #### env文件
 
-    ➜  conf git:(master) cat env
+    ➜  starter-run git:(master) cat env
     
-    BUNDLE_JAR_NAME=starter-assembly-demo.jar
+    BUNDLE_JAR_NAME=starter-shade-demo.jar
     
     export JAVA_OPTS="$JAVA_OPTS -server -Xms1024m -Xmx1024m -Xmn448m -Xss256K -XX:MaxPermSize=128m -XX:ReservedCodeCacheSize=64m"
     export JAVA_OPTS="$JAVA_OPTS -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:ParallelGCThreads=2"
     export JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
-    export JAVA_OPTS="$JAVA_OPTS -Dlogback.configurationFile=file:conf/logback.xml"
+    export JAVA_OPTS="$JAVA_OPTS -Dlogback.configurationFile=file:logback.xml"
 
 其中
 
@@ -121,19 +127,21 @@ mvn clean package starter:bin
 #### 执行、查看日志和关闭
 
     ➜  starter-run git:(master) sh start.sh
-    nohup java  -server -Xms1024m -Xmx1024m -Xmn448m -Xss256K -XX:MaxPermSize=128m -XX:ReservedCodeCacheSize=64m -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:ParallelGCThreads=2 -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Dlogback.configurationFile=file:conf/logback.xml -Djava.ext.dirs=/Users/knightliao/baiduyun/dev/git_java/starter-assembly-demo/target/starter-run/conf:/Users/knightliao/baiduyun/dev/git_java/starter-assembly-demo/target/starter-run/lib -jar lib/starter-assembly-demo.jar  >> log_1464885166.log 2>&1 &
-    ➜  starter-run git:(master) tail -f log_1464884529.log
-    Jun 03, 2016 12:22:09 AM org.springframework.context.support.ClassPathXmlApplicationContext prepareRefresh
-    信息: Refreshing org.springframework.context.support.ClassPathXmlApplicationContext@3e6c76f2: startup date [Fri Jun 03 00:22:09 CST 2016]; root of context hierarchy
-    Jun 03, 2016 12:22:10 AM org.springframework.beans.factory.xml.XmlBeanDefinitionReader loadBeanDefinitions
+    nohup java  -server -Xms1024m -Xmx1024m -Xmn448m -Xss256K -XX:MaxPermSize=128m -XX:ReservedCodeCacheSize=64m -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:ParallelGCThreads=2 -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Dlogback.configurationFile=file:logback.xml -jar starter-shade-demo.jar  >> log_1464945913.log 2>&1 &
+    ➜  starter-run git:(master) tail -f log_1464945913.log
+    信息: Refreshing org.springframework.context.support.ClassPathXmlApplicationContext@7c518f42: startup date [Fri Jun 03 17:25:13 CST 2016]; root of context hierarchy
+    六月 03, 2016 5:25:13 下午 org.springframework.beans.factory.xml.XmlBeanDefinitionReader loadBeanDefinitions
     信息: Loading XML bean definitions from class path resource [applicationContext.xml]
-    2016-06-03 00:22:10,348 [main] INFO  com.example.starter.DemoMain - {key=value}
-    2016-06-03 00:22:10,350 [main] INFO  com.example.starter.DemoMain - 0
-    2016-06-03 00:22:10,854 [main] INFO  com.example.starter.DemoMain - 1
-    2016-06-03 00:22:11,359 [main] INFO  com.example.starter.DemoMain - 2
-    2016-06-03 00:22:11,863 [main] INFO  com.example.starter.DemoMain - 3
+    2016-06-03 17:25:14,079 [main] INFO  com.example.starter.DemoMain - {key=value}
+    2016-06-03 17:25:14,082 [main] INFO  com.example.starter.DemoMain - 0
+    2016-06-03 17:25:14,583 [main] INFO  com.example.starter.DemoMain - 1
+    2016-06-03 17:25:15,089 [main] INFO  com.example.starter.DemoMain - 2
+    2016-06-03 17:25:15,593 [main] INFO  com.example.starter.DemoMain - 3
+    2016-06-03 17:25:16,097 [main] INFO  com.example.starter.DemoMain - 4
+    2016-06-03 17:25:16,602 [main] INFO  com.example.starter.DemoMain - 5
+    2016-06-03 17:25:17,108 [main] INFO  com.example.starter.DemoMain - 6
     ^C
     ➜  starter-run git:(master) sh stop.sh
-    Find process and pid=[41160]
-    Kill pid=[41160] done
+    Find process and pid=[79300]
+    Kill pid=[79300] done
     
